# web-scrapper-for-weather-forecast

./: main.py  pyproject.toml  weather.csv
